# hoptodesk-freebsd

./: Cargo.toml  README.md  build.rs
libs/arboard/src/: common.rs
libs/clipboard/src/: context_send.rs  lib.rs
libs/clipboard/src/platform/: windows.rs
libs/clipboard/src/windows/: wf_cliprdr.c
libs/default-net/: .cargo_vcs_info.json
libs/default-net/src/bpf/: binding.rs  unix.rs
libs/default-net/src/socket/: unix.rs
libs/default-net/src/sys/: unix.rs
libs/enigo/: Cargo.toml  build.rs
libs/enigo/src/: lib.rs
libs/enigo/src/macos/: macos_impl.rs
libs/enigo/src/win/: win_impl.rs
libs/hbb_common/: Cargo.toml
libs/hbb_common/protos/: message.proto  rendezvous.proto
libs/hbb_common/src/: api.rs  config.rs  fs.rs  lib.rs  proxy.rs  socket_client.rs  tcp.rs
libs/hbb_common/src/platform/: linux.rs  mod.rs
libs/keepawake/: Cargo.toml
libs/keepawake/src/sys/: mod.rs
libs/libxdo-sys-stub/src/: lib.rs
libs/magnum-opus/: build.rs
libs/magnum-opus/src/: lib.rs
libs/muda/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig
libs/muda/src/: error.rs  lib.rs  menu.rs
libs/muda/src/items/: submenu.rs
libs/muda/src/platform_impl/: mod.rs
libs/muda/src/platform_impl/gtk/: mod.rs
libs/muda/src/platform_impl/macos/: mod.rs
libs/muda/src/platform_impl/windows/: dark_menu_bar.rs  mod.rs
libs/privacyhelper/: Cargo.toml
libs/privacyhelper/src/: main.rs
libs/rdev/: Cargo.toml
libs/rdev/src/: lib.rs
libs/rdev/src/keycodes/: android.rs  chrome.rs
libs/rdev/src/linux/: keyboard.rs
libs/scrap/: Cargo.toml  build.rs
libs/scrap/examples/: benchmark.rs
libs/scrap/src/android/: ffi.rs
libs/scrap/src/common/: android.rs  camera.rs  codec.rs  convert.rs  dxgi.rs  ios.rs  mod.rs  record.rs  vpxcodec.rs  wayland.rs
libs/scrap/src/dxgi/: mag.rs  mod.rs
libs/scrap/src/ios/: ffi.rs
libs/scrap/src/wayland/: capturable.rs  pipewire.rs  screencast_portal.rs
libs/system_shutdown/: Cargo.toml
libs/system_shutdown/src/: lib.rs
libs/tfc/: Cargo.toml
libs/tfc/src/: lib.rs
libs/tfc/src/command/: execute.rs
libs/tfc/src/linux_common/: key_code.rs
libs/tfc/src/linux_x11/: mod.rs
libs/tfc/src/linux_x11/ffi/: xkb.rs
libs/tfc/src/utils/: non_zero.rs
libs/tray-icon/: Cargo.toml
libs/tray-icon/src/: error.rs  lib.rs
libs/turn/: Cargo.toml
libs/turn/src/client/: mod.rs  tcp.rs
libs/virtual_display/dylib/src/: lib.rs
libs/wry/src/: lib.rs
libs/wry/src/webkitgtk/: mod.rs
src/: auth_2fa.rs  client.rs  clipboard.rs  clipboard_file.rs  common.rs  core_main.rs  dashboard.rs  flutter.rs  flutter_ffi.rs  ipc.rs  keyboard.rs  lan.rs  lang.rs  lib.rs  main.rs  mcp_server.rs  port_forward.rs  privacy_mode.rs  rendezvous_mediator.rs  rendezvous_ws.rs  server.rs  tray.rs  turn_client.rs  ui.rs  ui_cm_interface.rs  ui_interface.rs  ui_session_interface.rs  version.rs  virtual_display_manager.rs
src/client/: file_trait.rs  io_loop.rs  screenshot.rs
src/hbbs_http/: account.rs
src/lang/: ar.rs  be.rs  bg.rs  ca.rs  cn.rs  cs.rs  da.rs  de.rs  el.rs  en.rs  eo.rs  es.rs  et.rs  eu.rs  fa.rs  fi.rs  fr.rs  he.rs  hr.rs  hu.rs  id.rs  it.rs  ja.rs  ko.rs  kz.rs  lt.rs  lv.rs  nb.rs  nl.rs  pl.rs  pt_PT.rs  ptbr.rs  ro.rs  ru.rs  sk.rs  sl.rs  sq.rs  sr.rs  sv.rs  template.rs  (+5 more)
src/platform/: linux.rs  macos.mm  macos.rs  mod.rs  windows.cc  windows.rs
src/platform/privileges_scripts/: daemon.plist
src/privacy_mode/: linux.rs  win_inline_privacy.rs  win_input.rs  win_topmost_window.rs
src/server/: audio_service.rs  clipboard_service.rs  connection.rs  display_service.rs  input_service.rs  portable_service.rs  printer_service.rs  service.rs  terminal_service.rs  uinput.rs  video_qos.rs  video_service.rs
src/ui/: ab.tis  cm.css  cm.rs  cm.tis  common.css  common.tis  file_transfer.css  file_transfer.tis  font.css  grid.tis  header.css  header.tis  index.css  index.tis  install.html  install.tis  msgbox.tis  port_forward.tis  remote.css  remote.rs  remote.tis  terminal_emulator.rs  ticket.html  ticket.tis
src/whiteboard/: client.rs  linux.rs  macos.rs  mod.rs  server.rs  windows.rs
